# OOP_LAB_Project

./: Admin.cpp  Admin.h  Assignment.cpp  Assignment.h  Attendance.cpp  Attendance.h  CMakeLists.txt  Course.cpp  Course.h  Database.cpp  Database.h  Discussion.cpp  Discussion.h  Faculty.cpp  Faculty.h  FeeChallan.cpp  FeeChallan.h  Feedback.cpp  Feedback.h  Grade.cpp  Grade.h  GradeBook.cpp  GradeBook.h  Instructor.cpp  Instructor.h  LMS.cpp  LMS.h  Notification.cpp  Notification.h  README.md  SeatingPlan.cpp  SeatingPlan.h  Student.cpp  Student.h  Submission.cpp  Submission.h  UIUtils.h  User.cpp  User.h  Utils.h  (+3 more)
www/: app.js  index.html  style.css
